[project]
name = ""
version = ""
description = ""
authors = [{ name = "axect", email = "ax2ct@outlook.com" }]
dependencies = [
    "torch>=2.1.0",
    "notebook>=7.0.5",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.1",
    "pyarrow>=13.0.0",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }
